remove purple theme colors, and fix spacing issue in sidenav

--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -1,12 +1,14 @@
 $mit-red: #a31e31;
 $body-bg-color: #fff;
 $linkcolor: #2568be;
+$mdc-theme-primary: #2568be;
 $icon-color: #ababab;
 $icon-hover: #007de1;
 $fontgray: #666;
 $card-bg-color: #fff;
 $card-shadow: rgba(0,0,0,.25);
 $blue-button: #007ee5;
+$blue-button-hover: #008cff;
 $dropbox-button-bgcolor: #007ee5;
 $lightgray-bg: #ececec;
 $darkgray-bg: #1e1e1e;
