--- a/static/scss/videoDetail.scss
+++ b/static/scss/videoDetail.scss
@@ -45,6 +45,8 @@
     margin-right: 9px;
     margin-bottom: 10px;
     min-width: 0;
+    background-color: $lightgray-bg;
+    color: $fontblack;
 
     .material-icons {
       color: #555;
